##Text encoding: utf-8

2011-03-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/molecule.cc: fixed loading alignment object.
	* libs/gcu/document.cc: a better fix for pasting.

2011-03-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: try to keep carbon atom in the plane as much as
	possible when importing the parity.
	* libs/gcp/stringdlg.cc: don't crash when copying a string from a closed
	dialog.
	* libs/gcu/bond.cc: add a default id.
	* libs/gcu/document.cc: fixed pasting.

2011-03-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: still more work on parity import.
	* libs/gcu/chain.cc: fixed typo.

2011-03-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: more work on parity import.
	* libs/gcu/chain.cc: implement some chain structure analysis.
	* libs/gcu/chain.h: ditto.

2011-03-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: more work on parity import.
	* libs/gcu/chain.cc: ditto.
	* libs/gcu/chain.h: ditto.

2011-03-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: more work on parity import.
	* libs/gcp/atom.h: ditto.
	* libs/gcp/molecule.cc: ditto.
	* libs/gcp/molecule.h: ditto.

2011-03-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* Makefile.am: add a new GL offscreen rendering external process.
	* configure.ac: ditto.
	* libs/gcp/atom.cc: fixed a test.
	* osmesa/Makefile.am: new GL offscreen rendering external process.
	* osmesa/osmesaserv.cc: ditto.
	* osmesa/socket.cc: ditto.
	* osmesa/socket.h: ditto.

2011-03-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: add all GSettings schemas.
	* libs/gcp/atom.cc: more work on parity import.
	* libs/gcp/atom.h: ditto.
	* libs/gcp/molecule.cc: ditto.
	* libs/gcp/molecule.h: ditto.
	* libs/gcu/objprops.h: ditto.
	* plugins/paint/arrows/Makefile.am: add all GSettings schemas.
	* plugins/paint/arrows/org.gnome.gchemutils.paint.plugins.arrows.gs
	chema.xml.in.in: ditto.