@@ -519,7 +519,6 @@ bool Molecule::Load (xmlNodePtr node)
 	xmlNodePtr child;
 	Object* pObject;
 	Document* pDoc = (Document*) GetDocument ();
-puts("loading molecule");
 
 	buf = (char*) xmlGetProp (node, (xmlChar*) "id");
 	if (buf) {
@@ -532,7 +531,6 @@ puts("loading molecule");
 		if (pDoc)
 			AddChild (pObject);
 		if (!pObject->Load (child)) {
-g_critical("deleted an atom");
 			delete pObject;
 			return false;
 		}
@@ -563,7 +561,6 @@ g_critical("deleted an atom");
 		if (pDoc)
 			AddChild (pObject);
 		if (!pObject->Load (child))  {
-g_critical("deleted a fragment");
 			delete pObject;
 			return false;
 		}
@@ -578,7 +575,6 @@ g_critical("deleted a fragment");
 		AddBond ((Bond*) pObject);
 		if (!pObject->Load (child)) {
 			delete pObject;
-g_critical("deleted a bond");
 			m_Bonds.remove ((Bond*) pObject);
 			return false;
 		}
@@ -606,7 +602,6 @@ g_critical("deleted a bond");
 		xmlFree (buf);
 	}
 	pDoc->ObjectLoaded (this);
-puts("molecule loaded");
 	return true;
 }
 
